# TelescopeGym

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: README.md  atmos_ptt_ppo.py  dark_hole_ppo.py
examples/models/: __init__.py  focal_plane_cnn.py
telescope_gym/: __init__.py
telescope_gym/action_parsers/: __init__.py  action_parser.py  actuator_actions.py
telescope_gym/done_conditions/: __init__.py  actuator_conditions.py  done_condition.py  pupil_rms_conditions.py  strehl_conditions.py  timeout_conditon.py
telescope_gym/envs/: __init__.py  telescope_gym_env.py
telescope_gym/obs_builders/: __init__.py  obs_builder.py  single_frame_obs.py  tokyo_drift_obs.py
telescope_gym/renderers/: __init__.py  dark_hole_render.py  renderer.py  single_frame_obs_render.py  two_frame_obs_render.py
telescope_gym/rewards/: __init__.py  improve_act_converge.py  improve_pupil_rms.py  improve_strehl.py  reward.py  speckle_nulling.py
telescope_gym/sim/: __init__.py  multi_aperture_psf.py  telescope_sim.py
telescope_gym/state_containers/: __init__.py  actuator_state.py  atmos_act_state.py  state_container.py  tokyo_drift_state.py
telescope_gym/state_setters/: __init__.py  atmos_act_setter.py  load_state_setter.py  normal_act_setter.py  state_setter.py  tokyo_drift_setter.py
telescope_gym/transition_controller/: __init__.py  actuator_gain_loop.py  tokyo_drift_transition.py  transition_controller.py
tests/: test_env.py
